updated boss pages with info box and fixed header 2 overflows

--- a/public/css/DMC1.css
+++ b/public/css/DMC1.css
@@ -93,6 +93,7 @@ h1 {
     color:#ff3333;
     border-bottom:1px dotted #D3BA7F;
     line-height: 1.3;
+	overflow: hidden;
 }
 
 #left h3{
