--- a/public/css/bossdatatable.css
+++ b/public/css/bossdatatable.css
@@ -1,11 +1,3 @@
-#bossdata{
-    color:#D3BA7F;
-    border-spacing: 3px;
-    background-color: rgba(0, 0, 0, .9);
-    border: 1px solid #D3BA7F;
-    padding: 0.2em;
-}
-
 #Steps{  
   text-align: justify;
   color:#D3BA7F; 
